<resources>
    <string name="app_name">HandControl</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="grpc">Интернет</string>
    <string name="author">Университет ИТМО</string>
    <string name="title_activity_navigation">MainActivity</string>
    <string name="title_settings">Настройки</string>
    <string name="title_execution">Выполнить жест</string>
    <string name="title_gestures">Жесты</string>
    <string name="title_action">Действие</string>
    <string name="title_telemetry">Телеметрия</string>
    <string name="title_choise">Выбор протеза</string>
    <string name="chart">Показания миоэлектроники</string>
    <string name="start">Старт</string>
    <string name="stop">Стоп</string>
    <string name="title_connection">Подключение bluetooth устройства</string>
    <string name="title_connection_not_found">Bluetooth не обнаружен</string>

    <string name="title_connection_description">Включите bluetooth на своем устройстве и соединитесь
    с устройством протеза. После этого нажмите «OK».</string>
    <string name="title_login">Вход</string>
    <string name="title_registration">Регистрация</string>
    <string name="button_login">Войти</string>
    <string name="button_registration">Регистрация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="login_">Логин*</string>e
    <string name="password_">Пароль*</string>
    <string name="name">Имя</string>
    <string name="ok">OK</string>
    <string name="proto">Prosthesis</string>
    <string name="change_prothesis">Выбор протеза</string>
    <string name="change_mode">Смена режима</string>
    <string name="logout">Выход</string>

    <string name="text_repeat_count">Количество повторов</string>
    <string name="switch_infinity_repeat">Бесконечный повтор</string>
    <string name="edit_name">Название жеста</string>
    <string name="title_new_gesture">Новый жест</string>
    <string name="text_actions">Действия</string>

    <string name="finger_thumb">Большой палец</string>
    <string name="finger_little">Мизинец</string>
    <string name="finger_middle">Средний палец</string>
    <string name="finger_pointer">Указательный палец</string>
    <string name="finger_ring">Безыменный палец</string>
    <string name="finger_error_toast">Заполните поля верно</string>
    <string name="delay">Задержка</string>

    <string name="current_gesture">Жест на исполнении</string>
    <string name="charge_level">Уровень заряда</string>
    <string name="active_gesture">Активный жест</string>
    <string name="telemetry_frequency">Частота телеметрии</string>
    <string name="finger1">Большой палец</string>
    <string name="finger2">Указательный палец</string>
    <string name="finger3">Средний палец</string>
    <string name="finger4">Безымянный палец</string>
    <string name="finger5">Мизинец</string>
    <string name="display">Дисплей</string>
    <string name="emg">Миоэлектроника</string>
    <string name="motor_driver">Драйвер моторов</string>
    <string name="gyroscope_accelerometer">Гироскоп и акселерометр</string>
    <string name="apply">Применить</string>
    <string name="working_mode">Режим работы</string>
    <string name="sending_telemetry_frequency">Частота отправки телеметрии</string>
    <string name="hertz">Гц</string>
    <string name="error">Ошибка</string>
    <string name="permission_denied">Нет разрешения!</string>
    <string name="unknown_command">Команда не распознана: %1$s</string>
    <string name="command_recognised">Команда: %1$s</string>
    <string name="recognition_lang">Язык распознавания</string>
    <string name="russian">Русский</string>
    <string name="english">Английский</string>
    <string name="mode_mio">mio</string>
    <string name="mode_commands">commands</string>
    <string name="mode_auto">auto</string>
    <string name="power_off">Выключение</string>
    <string name="power_off_confirmation">Отключить питание?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="valid_name_characters">ёйцукенгшщзхъэждлорпавыфячсмитьбюqwertyuioplkjhgfdsazxcvbnmЁЙЦУКЕНГШЩЗХЪЭЖДЛОРПАВЫФЯЧСМИТЬБЮQWERTYUIOPLKJHGFDSAZXCVBNM</string>
    <string name="choose_device_title">Выберите устройство</string>
</resources>