<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_execution">

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.handcontrol.ui.setting.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_redactor"
        android:name="com.handcontrol.ui.redactor.RedactorFragment"
        android:label="@string/title_redactor"
        tools:layout="@layout/fragment_redactor" />

    <fragment
        android:id="@+id/navigation_execution"
        android:name="com.handcontrol.ui.execution.ExecutionFragment"
        android:label="@string/title_execution"
        tools:layout="@layout/fragment_execution" />

    <fragment
        android:id="@+id/navigation_choise"
        android:name="com.handcontrol.ui.choise.ChoiseFragment"
        android:label="@string/title_choise"
        tools:layout="@layout/fragment_choise" />
</navigation>