<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_input"
            android:text="@string/button_login"
            android:layout_marginTop="393dp"
            android:textAppearance="@style/text1" />

        <Button
            android:id="@+id/registrationButton"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_input"
            android:elevation="4dp"
            android:layout_marginTop="464dp"
            android:text="@string/button_registration"
            android:textAppearance="@style/text1" />

        <EditText
            android:id="@+id/login"
            android:layout_width="260dp"
            android:layout_height="41dp"
            android:paddingStart="21dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/input"
            android:hint="@string/login"
            android:layout_marginTop="222dp"
            android:textAppearance="@style/text2" />

        <EditText
            android:id="@+id/password"
            android:layout_width="260dp"
            android:layout_height="41dp"
            android:layout_marginTop="279dp"
            android:paddingStart="21dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/input"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAppearance="@style/text2" />

        <TextView
            android:id="@+id/entrance"
            android:layout_width="97dp"
            android:layout_height="44dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="131dp"
            android:text="@string/title_login"
            android:textAlignment="center"
            android:textAppearance="@style/h1"
            tools:ignore="MissingConstraints,RtlCompat" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>