<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="89dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="4mm"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="112dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="internet_connection"
                android:text="@string/grpc" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="71dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="606dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Space
                android:layout_width="100dp"
                android:layout_height="50dp" />

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="bluetooth_connection"
                android:text="@string/bluetooth" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="52dp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="106dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="567dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Space
                android:layout_width="72dp"
                android:layout_height="43dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/author"
                android:textSize="25dp" />

            <Space
                android:layout_width="44dp"
                android:layout_height="37dp"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>