<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.handcontrol.ui.main.action.ActionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/list_horizontal_margin"
            android:layout_marginTop="@dimen/paragraph"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/finger_thumb"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/list_horizontal_margin"
            android:ems="2"
            android:gravity="end"
            android:inputType="numberDecimal"
            android:text="@={viewModel.thumbFinger}"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_margin"
            android:text="@string/finger_pointer"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:gravity="end"
            android:inputType="numberDecimal"
            android:text="@={viewModel.pointerFinger}"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            tools:text="100" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_margin"
            android:text="@string/finger_middle"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:gravity="end"
            android:inputType="numberDecimal"
            android:text="@={viewModel.middleFinger}"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView9"
            tools:text="100" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_margin"
            android:text="@string/finger_little"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_margin"
            android:text="@string/finger_ring"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <EditText
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:gravity="end"
            android:inputType="numberDecimal"
            android:text="@={viewModel.ringFinger}"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            tools:text="100" />

        <EditText
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:gravity="end"
            android:inputType="numberDecimal"
            android:text="@={viewModel.littleFinger}"
            app:layout_constraintEnd_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/textView11"
            tools:text="100" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>