<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.handcontrol.ui.main.gesturedetails.GestureDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/list_horizontal_margin"
            android:layout_marginVertical="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_name"
                android:inputType="textPersonName"
                android:text="@{viewModel.name}" />

        </com.google.android.material.textfield.TextInputLayout>


        <EditText
            android:id="@+id/editTextRepeatCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:enabled="@{!viewModel.isInfinity}"
            android:inputType="numberDecimal"
            android:text="@={viewModel.repeatCount}"
            app:layout_constraintStart_toStartOf="@+id/switch1"
            app:layout_constraintTop_toBottomOf="@+id/switch1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/list_horizontal_margin"
            android:enabled="@{!viewModel.isInfinity}"
            android:text="@string/text_repeat_count"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextRepeatCount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextRepeatCount" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/list_horizontal_margin"
            android:layout_marginVertical="@dimen/default_margin"
            android:checked="@={viewModel.isInfinity}"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_infinity_repeat"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/switch1"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/switch1" />

        <TextView
            android:id="@+id/actionsTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/list_horizontal_margin"
            android:layout_marginVertical="@dimen/paragraph"
            android:text="@string/text_actions"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextRepeatCount" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/default_margin"

            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/actionsTitle2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/editableActionsRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            tools:listitem="@layout/list_item_executable" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingAddActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/list_horizontal_margin"
            android:layout_marginVertical="@dimen/default_margin"
            android:clickable="true"
            android:tint="@color/colorIcon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>